# 07b-llms

./: .gitignore  README.md  index.html  index.qmd  index.quarto_ipynb  index.quarto_ipynb_1  pyproject.toml  temario.md
imagenes/: _gen_tensor_3x5x64.py
