[project]
name = "nlp-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2026.5.0",
    "ipykernel>=7.3.0",
    "jupyter-client>=8.8.0",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
]
